Update error pages to match Heroku format

--- a/templates/general-templates/base.html
+++ b/templates/general-templates/base.html
@@ -7,11 +7,14 @@
   <title>{% block title %}{% endblock %}</title>
 
   <!-- SEO meta text -->
-  <meta property='og:title' content='Horror House Book Reviews'/>
-  <meta property='og:image' content='https://i.postimg.cc/5yPsHXXQ/meta-image.png'/>
-  <meta property='og:description' content='Horror House reviews is a place for fans of horror fiction. 
-  Reviewers can create an account, read reviews by others, and write their own review.'/>
-  <meta property='og:url' content='https://horror-house-reviews.herokuapp.com/'/>
+  <meta property="og:title" content="Horror House Book Reviews"/>
+  <meta property="og:image" content="https://i.postimg.cc/5yPsHXXQ/meta-image.png"/>
+  <meta property="og:description" content="Horror House reviews is a place for fans of horror fiction. 
+  Reviewers can create an account, read reviews by others, and write their own review."/>
+  <meta property="og:url" content="https://horror-house-reviews.herokuapp.com/"/>
+
+  <meta name="description" content='Horror House reviews is a place for fans of horror fiction. 
+  Reviewers can create an account, read reviews by others, and write their own review.'>
 
 
 
