--- a/templates/general-templates/base.html
+++ b/templates/general-templates/base.html
@@ -34,8 +34,8 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/dark-mode.css') }}" id="mode-link" media="all">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" media="all">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" media="all">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css"media="all">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css" media="all">
 
 
   <link rel="icon" type="image/ico" href="{{url_for('static', filename='images/favicon.ico')}}">
