--- a/templates/general-templates/base.html
+++ b/templates/general-templates/base.html
@@ -240,7 +240,7 @@
 
   <!--EmailJS-->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" async></script>
-  <script async>
+  <script>
     (function () {
       emailjs.init("user_a8QTjCWqE9AEZDgd6Xxqb");
     })();
