--- a/templates/profile.html
+++ b/templates/profile.html
@@ -133,6 +133,6 @@
 {% endblock %}
 
 {% block splide_js %}
-<script src="{{ url_for('static', filename='js/splide.js') }}" async></script>
-<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js" async></script>
+<script src="{{ url_for('static', filename='js/splide.js') }}" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js" defer></script>
 {% endblock %}
