--- a/templates/general-templates/base.html
+++ b/templates/general-templates/base.html
@@ -239,8 +239,8 @@
   {% endblock %}
 
   <!--EmailJS-->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" defer></script>
-  <script defer>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <script>
     (function () {
       emailjs.init("user_a8QTjCWqE9AEZDgd6Xxqb");
     })();
