Defer Sweet Alert JS

--- a/templates/general-templates/base.html
+++ b/templates/general-templates/base.html
@@ -225,7 +225,7 @@
 
   <!--Sweet Alert-->
 
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" async></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" defer></script>
 
 
   <!-- Custom scripts -->
