Use Materialize Javacript CDN To reduce loading speed, I've added the parallax jQuery function and used the Materialize CDN. I've then removed the Materialize.js file

--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -14,7 +14,7 @@
       <li class="splide__slide">
         <div class="card large card-colour">
           <div class="card-image">
-            <img src={{featured.image}} alt="Book title for {{featured.title}}">
+            <img src={{featured.image}} alt="Book title for {{featured.title}}" class="book-image-height">
 
           </div>
           <div class="card-content center">
@@ -68,7 +68,7 @@
       <div class="card large card-colour z-depth-5">
 
         <div class="card-image">
-          <img src={{book.image}} alt="Book title for {{book.title}}">
+          <img src={{book.image}} alt="Book title for {{book.title}}" class="book-image-height">
         </div>
         <div class="card-content center">
           <p>{{book.title}}
