--- a/templates/general-templates/base.html
+++ b/templates/general-templates/base.html
@@ -19,23 +19,23 @@
 
 
   <!-- CSS  -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
-
-
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/dark-mode.css') }}" id="mode-link" media="all">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" media="all">
-
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" media="all">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-    integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous" media="all">
+    integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Crimson+Text:ital,wght@0,400;0,600;1,600&family=Open+Sans:wght@400;600&family=Poppins&display=swap"
     rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
+
+
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/dark-mode.css') }}" id="mode-link" media="all">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" media="all">
 
 
   <link rel="icon" type="image/ico" href="{{url_for('static', filename='images/favicon.ico')}}">
@@ -221,7 +221,9 @@
   <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous" async></script>
+  crossorigin="anonymous"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   <!--Sweet Alert-->
 
@@ -230,7 +232,6 @@
 
   <!-- Custom scripts -->
 
-  <script src="{{ url_for('static', filename='js/materialize.js') }}" async></script>
   <script src="{{ url_for('static', filename='js/light-mode.js') }}" async></script>
   <script src="{{ url_for('static', filename='js/contact-email.js') }}" async></script>
   <script src="{{ url_for('static', filename='js/init.js') }}" async></script>
