--- a/templates/individual-reviews.html
+++ b/templates/individual-reviews.html
@@ -40,7 +40,7 @@
       <p class="review-text">{{ind_book.review}}</p>
       <br>
       <div class="center">
-        <a href="{{ind_book.affiliate}}" target="_blank"
+        <a href="{{ind_book.affiliate}}" target="_blank" rel="noopener"
           class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
           Buy here
         </a>
