--- a/templates/general-templates/base.html
+++ b/templates/general-templates/base.html
@@ -34,7 +34,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
 
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/dark-mode.css') }}" id="mode-link" media="all">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/dark-mode.css') }}" id="mode-link"
+   media="all" rel="preload">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" media="all">
 
 
