--- a/templates/profile.html
+++ b/templates/profile.html
@@ -96,7 +96,7 @@
       <div class="card large card-colour z-depth-5">
 
         <div class="card-image">
-          <img src={{book.image}} alt="Book cover for {{book.title}}">
+          <img src={{book.image}} alt="Book cover for {{book.title}}" class="book-image-height">
         </div>
         <div class="card-content center">
           <p>{{book.title}}
