Update form labels Add label to select box for accessibility

--- a/templates/add_featured.html
+++ b/templates/add_featured.html
@@ -54,13 +54,13 @@
                             <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                             {% endfor %}
                         </select>
-                        <label>Categories</label>
+                        <label for="category_name">Categories</label>
 
                     </div>
 
                     <div class="col s7 l6">
                         <br>
-                        <label>Rate</label>
+                    
                         <div class="star-input rate-padding">
                             <input type="radio" name="rating" id="st5" title="5 stars" value="5" />
                             <label for="st5"></label>
