--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -53,7 +53,7 @@
                             <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                             {% endfor %}
                         </select>
-                        <label>Categories</label>
+                        <label for="category_name">Categories</label>
 
                     </div>
 
