--- a/templates/categories.html
+++ b/templates/categories.html
@@ -26,7 +26,7 @@
         <li class="splide__slide">
           <div class="card large card-colour">
             <div class="card-image">
-              <img src={{book.image}} alt="Book title for {{book.title}}">
+              <img src={{book.image}} alt="Book title for {{book.title}}" class="book-image-height">
 
             </div>
             <div class="card-content center">
