--- a/templates/edit_featured.html
+++ b/templates/edit_featured.html
@@ -69,7 +69,7 @@
 
                         </select>
 
-                        <label>Categories</label>
+                        <label for="category_name">Categories</label>
 
                     </div>
 
