--- a/templates/general-templates/base.html
+++ b/templates/general-templates/base.html
@@ -35,7 +35,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
 
 
-  <link rel="stylesheet preload" href="{{ url_for('static', filename='css/dark-mode.css') }}" id="mode-link">
+  <link rel="preload" as="style" href="{{ url_for('static', filename='css/dark-mode.css') }}" id="mode-link">
   <link rel="stylesheet preload" href="{{ url_for('static', filename='css/style.css') }}">
 
 
