Fix https and bugs on form Updated python file and templates to fix bugs with adding images and pulling select categories

--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -58,7 +58,7 @@
                         <select name="category_name" multiple>
                             
                             {% for category in categories %}
-                            {% if category.category_name == book.category_name %}
+                            {% if category.category_name is in book.category_name %}
                             <option value="{{category.category_name}}" selected>{{category.category_name}}
                             </option>
                             {% else %}
