--- a/static/css/light-mode.css
+++ b/static/css/light-mode.css
@@ -97,7 +97,7 @@ form .input-field label {
 
 /* valid color */
 form .input-field input[type=text].valid {
-  border-bottom: 1px solid #F07F83;
+  border-bottom: 1px solid #4caf50;
   box-shadow: 0 1px 0 0 #000;
 }
 
