--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -47,7 +47,7 @@
                 <div class="row">
                     <div class="input-field col s5 l6">
 
-                        <select name="category_name" multiple>
+                        <select name="category_name" class="validate" required multiple>
 
                             {% for category in categories %}
                             <option value="{{ category.category_name }}">{{ category.category_name }}</option>
