--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -55,17 +55,18 @@
                 <div class="row">
                     <div class="input-field col s5 l6">
 
-                        <select name="category_name" multiple>
+                        <select name="category_name" class="validate" required multiple>
                             
                             {% for category in categories %}
                             {% if category.category_name is in book.category_name %}
-                            <option value="{{category.category_name}}" selected>{{category.category_name}}
+                            
+                            <option value="{{category.category_name}}" selected>{{- category.category_name -}}
                             </option>
                             {% else %}
+                    
                             <option value="{{ category.category_name}}">{{category.category_name}}</option>
                             {% endif %}
                             {% endfor %}
-                           
 
                         </select>
 
