--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
             what other Horror House fans are saying. Find books you already like
             and check to see if there's already a review. If you're not seeing your 
             current book on our list, think of what you'd like to say. Then create
-            an account so you can a create new review.
+            an account so you can write a new review.
           </p>
         </div>
       </div>
