--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -4,6 +4,8 @@
 
 {% block main_heading %} Create your own account {% endblock %}
 
+<!-- Sign up form -->
+
 {% block content %}
 <div class="row">
   <div class="col s12 l12">
