--- a/templates/add_featured.html
+++ b/templates/add_featured.html
@@ -8,20 +8,22 @@
 
 <div class="row">
     <div class="col s12 l12">
-
+        <!-- Add featured review form -->
         <div class="overflow-form individual-review-background">
             <form method="POST" action="{{ url_for('add_featured') }}">
                 <div class="row">
+                    <!-- Add book title-->
                     <div class="input-field col s6 l6">
                         <input id="title" type="text" name="title" class="validate" required>
                         <label for="title">Title</label>
                     </div>
+                    <!-- Add author name-->
                     <div class="input-field col s6 l6">
                         <input id="author" type="text" name="author" class="validate" required>
                         <label for="author">Author</label>
                     </div>
-                </div>
-
+                </div> 
+                <!-- Add affiliate link-->
                 <div class="row">
                     <div class="input-field col s6 l6">
                         <input id="affiliate" type="url" name="affiliate" class="validate tooltipped"
@@ -29,13 +31,15 @@
                             required>
                         <label for="affiliate">Add affiliate link</label>
                     </div>
-
+                    <!-- Add book image-->
                     <div class="input-field col s6 l6">
                         <input id="image" type="url" name="image" class="validate tooltipped" data-position="bottom"
                             data-tooltip="Add a .png or .jpg image sized at 500 pixels wide" required>
                         <label for="image">Add book image</label>
                     </div>
                 </div>
+
+                <!-- Add review-->
                 <div class="row">
                     <div class="input-field col s12">
                         <textarea id="review" name="review" class="validate tooltipped materialize-textarea"
@@ -48,6 +52,7 @@
                 <div class="row">
                     <div class="input-field col s5 l6">
 
+                        <!-- Category dropdown-->
                         <select name="category_name" class="validate" required multiple>
 
                             {% for category in categories %}
@@ -58,6 +63,7 @@
 
                     </div>
 
+                    <!-- Rating stars-->
                     <div class="col s7 l6">
                         <br>
                     
@@ -79,6 +85,7 @@
                     </div>
 
                 </div>
+                <!-- Create review button -->
                 <div class="row add-button-padding">
                     <div class="col l6 center">
                         <button class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles"
@@ -86,7 +93,7 @@
                             Create review
                         </button>
                     </div>
-
+                    <!-- Cancel review modal button-->
                     <div class="col l6 center">
                         <a class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles blue-grey modal-trigger"
                             href="#cancel-modal1">Cancel
