--- a/templates/edit_featured.html
+++ b/templates/edit_featured.html
@@ -7,6 +7,7 @@
 {% block content %}
 
 <div class="row">
+    <!-- Edit featured review form -->
     <div class="col s12 l12">
 
         <div class="overflow-form individual-review-background">
@@ -15,18 +16,20 @@
             <form method="POST" action="{{ url_for('edit_featured', featured_id=featured._id) }}">
 
                 <div class="row">
+                    <!-- Edit book title-->
                     <div class="input-field col s6 l6">
                         <input id="title" type="text" value="{{featured.title }}" name="title" class="validate"
                             required>
                         <label for="title">Title</label>
                     </div>
+                    <!-- Edit author name-->
                     <div class="input-field col s6 l6">
                         <input id="author" type="text" value="{{ featured.author }}" name="author" class="validate"
                             required>
                         <label for="author">Author</label>
                     </div>
                 </div>
-
+                <!-- Edit affiliate link-->
                 <div class="row">
                     <div class="input-field col s6 l6">
                         <input id="affiliate" type="url" value="{{ featured.affiliate}}" name="affiliate"
@@ -34,7 +37,7 @@
                             data-tooltip="Please add an affiliate link from a bookseller" required>
                         <label for="affiliate">Add bookseller link</label>
                     </div>
-
+                    <!-- Edit book image-->
                     <div class="input-field col s6 l6">
                         <input id="image" type="url" value="{{ featured.image }}" name="image"
                             class="validate tooltipped" data-position="bottom"
@@ -42,6 +45,7 @@
                         <label for="image">Add book image</label>
                     </div>
                 </div>
+                <!-- Edit review-->
                 <div class="row">
                     <div class="input-field col s12">
                         <textarea id="review" name="review" class="validate tooltipped materialize-textarea"
@@ -55,7 +59,7 @@
 
                 <div class="row">
                     <div class="input-field col s5 l6">
-
+                        <!-- Category dropdown-->
                         <select name="category_name" class="validate" required multiple>
 
                             {% for category in categories %}
@@ -75,9 +79,9 @@
 
                     <div class="col s7 l6">
                         <br>
-                        <!-- <label>Rate (Optional)</label> -->
+                        <!-- Rating stars-->
                         <div class="star-input rate-padding required">
-                            {% include "components/f-edit-rating-temp.html" %}
+                            {% include "components/edit-featured-rating.html" %}
 
                         </div>
 
@@ -88,13 +92,14 @@
 
                 <div class="row edit-button-padding ">
                     <div class="col s4 l4 center">
+                        <!-- Update review button -->
                         <button class="btn-large add-edit-btn  waves-effect waves-dark lighten-1 btn-styles center"
                             type="submit">Update
                         </button>
 
                     </div>
 
-
+                    <!-- Cancel edit modal button-->
                     <div class="col s4 l4 center">
                         <a class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles modal-trigger blue-grey center"
                             href="#cancel-modal1">Cancel
@@ -118,6 +123,7 @@
                             Delete
                         </a>
 
+                        <!-- Delete review modal button-->
                         <div id="delete-modal1" class="modal teal lighten-4">
                             <div class="modal-content">
                                 <h4 class="center">Are you sure you want to delete this review?</h4>
