--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -8,24 +8,25 @@
 
 <div class="row">
     <div class="col s12 l12">
-
+        <!-- Edit review form -->
         <div class="overflow-form individual-review-background">
-
 
             <form method="POST" action="{{ url_for('edit', book_id=book._id) }}">
 
                 <div class="row">
+                    <!-- Edit book title-->
                     <div class="input-field col s6 l6">
                         <input id="title" type="text" value="{{ book.title }}" name="title" class="validate" required>
                         <label for="title">Title</label>
                     </div>
+                    <!-- Edit author name-->
                     <div class="input-field col s6 l6">
                         <input id="author" type="text" value="{{ book.author }}" name="author" class="validate"
                             required>
                         <label for="author">Author</label>
                     </div>
                 </div>
-
+                 <!-- Edit bookseller link-->
                 <div class="row">
                     <div class="input-field col s6 l6">
                         <input id="affiliate" type="url" value="{{ book.affiliate}}" name="affiliate"
@@ -33,7 +34,7 @@
                             data-tooltip="Please add an affiliate link from a bookseller" required>
                         <label for="affiliate">Add bookseller link</label>
                     </div>
-
+                    <!-- Edit book image-->
                     <div class="input-field col s6 l6">
                         <input id="image" type="url" value="{{ book.image }}" name="image" class="validate tooltipped"
                             data-position="bottom" data-tooltip="Add a .png or .jpg image sized at 500 pixels wide"
@@ -41,6 +42,7 @@
                         <label for="image">Add book image</label>
                     </div>
                 </div>
+                <!-- Edit review-->
                 <div class="row">
                     <div class="input-field col s12">
                         <textarea id="review" name="review" class="validate tooltipped materialize-textarea"
@@ -54,7 +56,7 @@
 
                 <div class="row">
                     <div class="input-field col s5 l6">
-
+                        <!-- Category dropdown-->
                         <select name="category_name" class="validate" required multiple>
                             
                             {% for category in categories %}
@@ -76,9 +78,9 @@
 
                     <div class="col s7 l6">
                         <br>
-                        <!-- <label>Rate (Optional)</label> -->
+                         <!-- Rating stars-->
                         <div class="star-input rate-padding required">
-                            {% include "components/edit-rating-temp.html" %}
+                            {% include "components/edit-rating.html" %}
 
                         </div>
 
@@ -88,13 +90,14 @@
                 </div>
 
                 <div class="row">
+                    <!-- Update review button -->
                     <div class="col l4 center">
                         <button class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles center"
                             type="submit">Update
                         </button>
 
                     </div>
-
+                    <!-- Cancel edit modal button-->
                     <div class="col l4 center">
                         <a class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles modal-trigger blue-grey center"
                             href="#cancel-modal1">Cancel
@@ -112,6 +115,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Delete review modal button-->
                     <div class="col l4 center">
                         <a href="#delete-modal1"
                             class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-delete btn-styles modal-trigger">
