--- a/templates/featured-reviews.html
+++ b/templates/featured-reviews.html
@@ -5,8 +5,9 @@
 
 
 <div class="row overflow-review individual-review-background">
+  
+  <!-- Breadcrumb navigation-->
   <nav>
-
     <div class="nav-wrapper" id="breadcrumb-bar">
       <div class="col l12">
         <a href="{{ url_for('reviews') }}" class="breadcrumb">All Reviews</a>
@@ -16,12 +17,17 @@
   </nav>
 
   <div class="col m12 l5 xl4 center">
+
+    <!-- Book cover image-->
     <img class="book-review-image" src={{featured.image}} alt="Book cover for {{featured.title}}">
-    {% include "components/featured-rating-temp.html" %}
+
+     <!-- Rating stars -->
+    {% include "components/featured-rating.html" %}
 
     <div class="center">
       <p>Reviewed by {{featured.created_by}}</p>
 
+      <!-- Category chips-->
       {% for category in featured.category_name %}
 
       <div class="chip">
@@ -33,12 +39,16 @@
     </div>
 
   </div>
+
+  <!-- Review information -->
   <div class="col m12 l7 xl8">
     <div class="review-content">
       <h3 class="custom-font center">{{featured.title}} by {{featured.author}}</h3>
       <br>
       <p>{{featured.review}}</p>
       <br>
+
+      <!-- Bookseller link -->
       <div class="center">
         <a href="{{featured.affiliate}}" target="_blank" rel="noopener"
           class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn center">
