--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="home-card-title center">
           A place for horror fans
         </div>
-       
+       <!-- Info card -->
         <p id="light-mode-font">
           Do you love spooky stories? 
           Are you a fan of blood-chilling suspense?
@@ -25,7 +25,7 @@
     </div>
   </div>
 </div>
-
+<!-- Call to Action -->
 <div class="row center">
   <a href="{{ url_for('reviews') }}" class="btn-large waves-effect waves-dark lighten-1 btn-styles">
   Browse reviews
