--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,8 @@
 {% block main_heading %} Login to your account {% endblock %}
 
 {% block content %}
+
+<!-- Login form -->
 <div class="row">
   <div class="col s12 l12">
     <div class="card medium card-colour login-card-padding">
