--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-
+<!-- Profile tabs -->
 <div class="row">
   <div class="col s12">
     <div class="overflow-review">
@@ -18,6 +18,8 @@
         {% endif %}
 
       </ul>
+
+      <!-- General profile information -->
       <div id="main-info" class="col s12 review-container">
         <div class="center main-info-padding">
           <h3 class="manage-featured">Horror House reviewer {{username}}</h3>
@@ -28,7 +30,7 @@
         </div>
       </div>
 
-
+      <!-- Update password form -->
       <div id="update-info" class="col s12 review-container center">
 
         <h3 class="custom-font manage-featured">Update your password</h3>
@@ -66,12 +68,13 @@
         </form>
       </div>
 
+      <!-- Add/Edit Featured Books-->
       {% if session.user|lower == "admin"|lower %}
-      {% include "components/add-edit.html" %}
+      {% include "components/superuser-featured.html" %}
       {% endif %}
 
       {% if session.user|lower == "cmk416"|lower %}
-      {% include "components/add-edit.html" %}
+      {% include "components/superuser-featured.html" %}
       {% endif %}
 
 
@@ -83,7 +86,7 @@
 
 {% block below_content %}
 
-
+<!-- Edit Individual reviews-->
 <div class="review-container">
 
   <h2 class="center">Reviews by {{username}}</h2>
@@ -116,6 +119,7 @@
 
     {% else %}
 
+    <!-- Displays if user has no reviews -->
     <div class="col l12 center">
       <p>You haven't created any reviews yet.</p>
       <div>
@@ -132,6 +136,7 @@
 
 {% endblock %}
 
+<!-- Splide JS -->
 {% block splide_js %}
 <script src="{{ url_for('static', filename='js/splide.js') }}" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js" defer></script>
