--- a/templates/edit_featured.html
+++ b/templates/edit_featured.html
@@ -40,6 +40,7 @@
                     <!-- Edit book image-->
                     <div class="input-field col s6 l6">
                         <input id="image" type="url" value="{{ featured.image }}" name="image"
+                        pattern="(http(s?):)([/|.|\w|\s|-])*\.(?:jpg|png)"
                             class="validate tooltipped" data-position="bottom"
                             data-tooltip="Add a .png or .jpg image sized at 500 pixels wide" required>
                         <label for="image">Add book image</label>
