--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -37,6 +37,7 @@
                     <!-- Edit book image-->
                     <div class="input-field col s6 l6">
                         <input id="image" type="url" value="{{ book.image }}" name="image" class="validate tooltipped"
+                            pattern="(http(s?):)([/|.|\w|\s|-])*\.(?:jpg|png)"
                             data-position="bottom" data-tooltip="Add a .png or .jpg image sized at 500 pixels wide"
                             required>
                         <label for="image">Add book image</label>
