Update on small bugs

--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -32,7 +32,7 @@
             <div class="input-field col s12">
               <i class="material-icons prefix login-icon-light">account_box</i>
               <input id="username" type="text" name="username" class="validate tooltipped" minlength="5" maxlength="15"
-                pattern="^[a-zA-Z0-9]{5,15}$" data-position="bottom" data-tooltip="Please create a username of letters &amp;
+                 data-position="bottom" data-tooltip="Please create a username of letters &amp;
                 numbers that's 5-15 characters long" required>
               <label for="username">Username</label>
             </div>
@@ -41,7 +41,7 @@
             <div class="input-field col s12">
               <i class="material-icons prefix login-icon-light">enhanced_encryption</i>
               <input id="password" type="password" name="password" class="validate tooltipped" minlength="5"
-                maxlength="15" pattern="^(?=.{5,15})(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$&^]).*$" data-position="bottom"
+                maxlength="15"  data-position="bottom"
                 data-tooltip="Password must contain one uppercase &amp; 
               lowercase letter &amp; a number &amp; a special character: @#$&^" required>
               <label for="password">Password</label>
